--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Open Sans', sans-serif;
 }
 html, body{
     height: 100%;
@@ -19,7 +20,7 @@ html, body{
 
 /***/
 header{
-    background-color: #D6D6D6;
+    background-color: rgb(180, 180, 180);
     padding: 10px 2% 30px 2%;
 }
 .logo-1{
@@ -56,7 +57,9 @@ section.cover-form{
 .form-wrapper:not(:first-child){
     margin-top: 40px;
 }
-
+.form-wrapper:last-child{
+    margin-top: 20px;
+}
 .form-container{
     margin-right: 40px;
     float: right;
@@ -65,14 +68,15 @@ section.cover-form{
     position: relative;
     top: -5%;
     background-color: white;
-  
+  box-shadow: 1px 1px 2px 1px rgb(180, 180, 180);
+  z-index: 2;
 }
 .form-container h2{
     font-weight: normal;
-    padding:20px 15px;
+    padding:25px 15px;
     color: black;
     font-size: 18px;
-    background-color: rgba(234, 236, 239, 0.7);
+    background-color: rgba(210 , 210, 210, 0.7);
 }
 .form-container form{
     width: 100%;
@@ -92,7 +96,13 @@ section.cover-form{
     height: 40px;
     position: relative;
     border: 1px solid #CCC;
+    z-index: 2;
 }
+/*nao esta funcionando*/
+.form-container form input [type = text] {
+    line-height: 10px;
+}
+/*-----------------------------*/
 .form-container form input[type = submit]{
     background-color: #033C50;
     text-transform: uppercase;
@@ -103,8 +113,25 @@ section.cover-form{
     cursor: pointer;
     border: 0;
 }
-form-wrapper:last-child{
-    margin-top: 20px;
+section.chamada{
+    z-index: 1;
+    position: relative;
+    top: -50px;
+    width: 100%;
+    text-align: center;
+    display: inline-block;
+}
+section.chamada h2{
+    width: 96%;
+    max-width: 700px;
+    display: inline-block;
+    color: white;
+    font-size: 24px;
+    font-weight: normal;
+}
+section.chamada .container{
+    background-color: #7c6757;
+    padding: 50px 0;
 }
 @media screen and (max-width: 510px) {
     header{
