--- a/css/style.css
+++ b/css/style.css
@@ -44,12 +44,12 @@ header{
 
 section.cover-form{
     width: 100%;
-    padding: 0 2%;
 
 }
 .bg
 {
-    height: 500px;
+    position: relative;
+    height: 560px;
     background-position: center;
     background-size: cover;
     background-image: url(../imagens/background.jpeg);
@@ -61,12 +61,11 @@ section.cover-form{
     margin-top: 20px;
 }
 .form-container{
-    margin-right: 40px;
-    float: right;
+    position: absolute;
+    right: 30px;
+    top: -2.5%;
     width: 400px;
-    height: 110%;
-    position: relative;
-    top: -5%;
+    height: 105%;
     background-color: white;
   box-shadow: 1px 1px 2px 1px rgb(180, 180, 180);
   z-index: 2;
@@ -80,7 +79,7 @@ section.cover-form{
 }
 .form-container form{
     width: 100%;
-    margin-top: 8px;
+    margin-top: 20px;
     padding: 30px;
 
 }
@@ -115,24 +114,49 @@ section.cover-form{
 }
 section.chamada{
     z-index: 1;
-    position: relative;
-    top: -50px;
     width: 100%;
     text-align: center;
-    display: inline-block;
+}
+section.chamada .container{
+    background-color: #29526D;
+    padding: 70px 0 50px 0;
 }
 section.chamada h2{
-    width: 96%;
+    width: 98%;
     max-width: 700px;
     display: inline-block;
     color: white;
     font-size: 24px;
     font-weight: normal;
+    text-transform: uppercase;
+    
 }
-section.chamada .container{
-    background-color: #7c6757;
-    padding: 50px 0;
+section.chamada p{
+    width: 98%;
+    max-width: 700px;
+    display: inline-block;
+    color: white;
+    margin-top: 10px;
+    font-size: 18px;
+    font-weight: normal;
+    
 }
+
+@media screen and (max-width: 960px){
+    .bg{
+        height: auto;
+        padding: 40px 0;
+        text-align: center;
+    }
+    .form-container{
+        height: auto;
+        width: 96%;
+        max-width: 400px;
+        position: static;
+        display: inline-block;
+    }
+}
+
 @media screen and (max-width: 510px) {
     header{
         text-align: center;
