--- a/css/style.css
+++ b/css/style.css
@@ -20,10 +20,11 @@ html, body{
 
 /***/
 header{
-    background-color: rgb(180, 180, 180);
+    background-color: rgb(96, 130, 172);
     padding: 10px 2% 30px 2%;
 }
 .logo-1{
+    margin-top: 10px;
     float: left;
     width: 150px;
     height: 60px;
@@ -142,6 +143,34 @@ section.chamada p{
     
 }
 
+.flex-mosaico{
+    display: flex;
+}
+.item-1-mosaico{
+    background-position: center;
+    background-size: cover;
+    width: 60%;
+}
+.item-2-mosaico{
+    background-color: #3a7298;
+    padding: 60px 40px;
+    width: 40%;
+}
+.item-2-mosaico p{
+    color: white;
+}
+footer{
+    background-color: rgb(96, 130, 172);
+    text-align: center;
+    padding: 20px 0;
+}
+footer p{
+    margin-top: 8px;
+    color: white;
+}
+footer img{
+    width: 120px;
+}
 @media screen and (max-width: 960px){
     .bg{
         height: auto;
@@ -154,6 +183,20 @@ section.chamada p{
         max-width: 400px;
         position: static;
         display: inline-block;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .flex-mosaico{
+        display: block;
+    }
+    .item-1-mosaico{
+        padding-top: 80%;
+        width: 100%;
+    }
+    .item-2-mosaico{
+        text-align: justify;
+        width: 100%;
     }
 }
 
